<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HDMIRes</string>

    <string name="category_hdmi_title">HDMI</string>

    <string name="category_screen_title">Screen</string>

    <string name="service_active_title">Use HDMI Service</string>
    <string name="service_active_summary">Resize the screen when HDMI is plugged/unplugged</string>

    <string name="screen_active_title">Set screen size</string>
    <string name="screen_active_summary">Resize the screen now and when the system is booted</string>

    <string name="width">Screen width</string>
    <string name="height">Screen height</string>
    <string name="density">Screen density</string>

    <string name="default_width">2560</string>
    <string name="default_hdmi_height">1440</string>
    <string name="default_screen_height">1600</string>
    <string name="default_density">320</string>
</resources>
