<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="service_active"
        android:title="@string/service_active_title"
        android:summary="@string/service_active_summary"
        android:defaultValue="true" />

    <EditTextPreference
        android:key="width"
        android:title="@string/width"
        android:dialogTitle="@string/width"
        android:dependency="service_active"
        android:defaultValue="@string/default_width"/>

    <EditTextPreference
        android:key="height"
        android:title="@string/height"
        android:dialogTitle="@string/height"
        android:dependency="service_active"
        android:defaultValue="@string/default_height"/>

    <EditTextPreference
        android:key="density"
        android:title="@string/density"
        android:dialogTitle="@string/density"
        android:dependency="service_active"
        android:defaultValue="@string/default_density"/>

</PreferenceScreen>
